# talking-face

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  inference.sh  inference_trt.py  pyproject.toml  ray_serve_config.yaml  requirements.txt
app/: fe_app.py  gradio_demo.py
app/services/: e2e_services.py  main.py  tts_services.py  video_services.py
app/static/: index.html
common/: voice.py
config/: app.py  video.py  voice.py
schemas/: app.py  video.py  voice.py
scripts/: dev.sh  prod.sh
src/: tts_engine.py  video_engine.py
src/face3d/util/: preprocess.py
src/facerender/: animate_trt.py
src/facerender/modules/: dense_motion.py  generator.py  util.py
src/sadtalker/: generate_batch.py  gradio_demo.py  test_audio2coeff.py
src/sadtalker/audio2pose_models/: audio2pose.py  cvae.py  res_unet.py
src/sadtalker/face3d/: extract_kp_videos_safe.py  visualize.py
src/sadtalker/face3d/models/: __init__.py  bfm.py  facerecon_model.py
src/sadtalker/face3d/util/: __init__.py
src/sadtalker/facerender/: animate.py  animate_trt.py
src/sadtalker/facerender/modules/: dense_motion.py  generator.py  generator_trt.py  keypoint_detector.py  make_animation_trt.py  util.py
src/sadtalker/utils/: audio.py  croper.py  face_enhancer.py  model2safetensor.py  paste_pic.py  preprocess.py  videoio.py
src/utils/: paste_pic.py
tensorrt/: kp_driving.pt  kp_source.pt  to_onnx.py  to_onnx_gs.py  to_trt.sh
test/: test_video_generator.py
